--- a/GusStyle.css
+++ b/GusStyle.css
@@ -1,4 +1,4 @@
-﻿/* === BASE STYLES === */
+/* === BASE STYLES === */
 body {
     font-family: "Montserrat", sans-serif;
     margin: 0;
@@ -234,12 +234,28 @@ body {
         width: 45%;
     }
 }
-
+body, html {
+    overflow-x: hidden;
+}
 @media screen and (max-width: 768px) {
     .wrapper {
         flex-direction: column;
         width: 100%;
         padding: 0 20px;
+    }
+    img[alt="Banderogus"] {
+        max-width: 400px; /* десктоп */
+        width: 100%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media (max-width: 768px) {
+        img[alt="Banderogus"] {
+            max-width: 90vw;
+        }
     }
 
     .main-page-text-container,
